# babel

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
client/: CMakeLists.txt
client/include/: const_expressions.h
client/include/Audio/: AudioBuffer.hpp  Opus.hpp
client/include/Network/: Thread.hpp
client/include/Opus/: Decoder.hpp  Encoder.hpp
client/include/Widgets/: Call.hpp  Contacts.hpp  Login.hpp  MainWindow.hpp
client/src/: main.cpp
client/src/Audio/: AudioBuffer.cpp  Opus.cpp
client/src/Network/: Thread.cpp
client/src/Opus/: Decoder.cpp  Encoder.cpp
client/src/Widgets/: Call.cpp  Contacts.cpp  Login.cpp  MainWindow.cpp  NetFunctions.cpp  WindowSlots.cpp
common/include/: Error.hpp  IAudioDevice.hpp  ICodec.hpp  Packet.hpp
common/src/: Error.cpp  Packet.cpp
docs/: protocol.txt
server/: CMakeLists.txt
server/include/: Clients.hpp  Database.hpp  Server.hpp
server/src/: Clients.cpp  ClientsResponses.cpp  Database.cpp  Server.cpp  main.cpp
